# OpenGLTest

./: .gitignore  CMakeLists.txt  HowToSetup.txt  OpenGLTest.exe - 快捷方式.lnk  build.bat  compileShader.bat  conanfile.py  genProject.bat
OpenGLTest/: OpenGLTest.cpp  OpenGLTest.sln  OpenGLTest.vcxproj  OpenGLTest.vcxproj.filters  Shader.cpp  Shader.h  TestFragShader.frag  TestVertShader.vert  imgui.ini
OpenGLTest/lib/: glad.c
OpenGLTest/src/: Bounds.cpp  Bounds.h  BuiltInRes.cpp  BuiltInRes.h  Camera.cpp  Camera.h  ConstVars.cpp  ConstVars.h  CullMode.cpp  CullMode.h  CullingSystem.cpp  Entity.cpp  Entity.h  Event.h  GameFramework.cpp  GameFramework.h  Gui.cpp  Gui.h  Image.cpp  Image.h  IndirectLighting.cpp  IndirectLighting.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Object.cpp  Object.h  OpenGLTest.cpp  OpenGLTest.h  RenderContext.cpp  RenderContext.h  RenderPipeline.cpp  RenderPipeline.h  RenderTarget.cpp  RenderTarget.h  RenderTexture.cpp  RenderTexture.h  RenderingUtils.cpp  RenderingUtils.h  (+13 more)
assets/: Common.glsl  TODO.txt  TestFragShader.frag  TestScene.json  TestVertShader.vert  shaders.pack  shadowMat.json  skyboxMat.json  standardMat.json
assets/Shaders/: Blit.frag  Blit.glsl  Blit.vert  Common.glsl  DeferredShading.glsl  DrawShadow.glsl  FinalBlit.frag  FinalBlit.glsl  FinalBlit.vert  Lit.glsl  SkyboxShader.glsl  TestFragShader.frag  TestVertShader.glsl  TestVertShader.vert  blit.glsl  ground.glsl  kawase_blit.glsl
assets/materials/: ground_mat.json  lit_mat.json  lit_mat_batch.json  lit_mat_transparent.json  skybox_mat.json  standard_mat.json
assets/scenes/: test_scene.json
assets/shaders/: Lit.glsl  blit.shader  deferred_shading.glsl  deferred_shading.shader  draw_shadow.glsl  draw_shadow.shader  dual_kawase_downsample.glsl  dual_kawase_upsample.glsl  final_blit.glsl  (+9 more)
src/: Bounds.h  BuiltInRes.cpp  BuiltInRes.h  Camera.cpp  Camera.h  CullMode.cpp  CullMode.h  CullingSystem.cpp  CullingSystem.h  Entity.cpp  Entity.h  Event.h  GameFramework.cpp  GameFramework.h  Gui.cpp  Gui.h  Image.cpp  IndirectLighting.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Object.cpp  Object.h  OpenGLTest.cpp  OpenGLTest.h  RenderContext.cpp  RenderContext.h  RenderPipeline.cpp  RenderPipeline.h  RenderTarget.cpp  RenderTarget.h  RenderTexture.cpp  RenderTexture.h  RenderingUtils.cpp  RenderingUtils.h  Scene.cpp  Scene.h  Shader.cpp  Shader.h  (+80 more)
tools/: common.py  config.toml  main.py  shader_compiler.py
(+260 files in other folders)
